<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synapse</string>
    <string name="title_activity_main">Synapse</string>
    <string name="title_activity_settings">Settings</string>

    <string name="label_default_value">defaultValue</string>
    <string name="label_seek_value">seekValue</string>
    <string name="label_stored_value">storedValue</string>

    <string name="initial_loading">Loading…</string>
    <string name="initial_no_uci">No UCI support detected.</string>
    <string name="initial_no_root">No root permissions granted.</string>
    <string name="initial_json_parse">JSON configuration parsing failure.</string>

    <string name="activity_link_movement_failure">Link could not be opened by any application.</string>

    <string name="action_apply">Apply</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_select">Select</string>

    <string name="action_settings">Settings</string>

    <string name="action_reset">Reset to defaults</string>
    <string name="action_section_select_all">Select all in section</string>
    <string name="action_global_select_all">Select all globally</string>

    <string name="boot_service_complete">Synapse boot completed</string>
    <string name="boot_service_cancel">Synapse boot canceled</string>

    <string name="popup_failed_boot_title">Boot settings canceled</string>
    <string name="popup_failed_boot_message">The last applied settings have not been deemed stable due to a possible crash or reboot of the device.\n\nSettings are deemed stable 2 minutes after they\'re applied at boot.\n\nPress cancel to reset to the last saved settings.</string>
    <string name="popup_failed_boot_ack">Understood</string>

    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>

    <string name="preference_category_boot_title">Boot service</string>
    <string name="preference_bool_boot_master_title">Apply on boot</string>
    <string name="preference_bool_boot_master_summary">Master switch for the boot service.</string>
    <string name="preference_bool_boot_probation_title">Stability check</string>
    <string name="preference_bool_boot_probation_summary">Revert all changes if the device crashes or is powered off within 2 minutes after boot.</string>

    <string name="preference_category_theme_title">Theme</string>

    <string name="preference_list_theme_option_title">Application theme</string>
    <string name="preference_list_theme_option_summary">Changes the looks of the application</string>
    <string name="preference_list_theme_option_dialog_title">Choose a theme:</string>
    <string name="rgb_representation">RGB representation</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="hue">Hue</string>
    <string name="defaulthue">defaultHue°</string>
    <string name="defaultsat">defaultSat</string>
    <string name="defaultvalue">defaultValue</string>
    <string name="colour_label">Colour label</string>
    <string name="bb">BB</string>
    <string name="gg">GG</string>
    <string name="rr">RR</string>
    <string name="load_default">(Load default)</string>
    <string name="placeholder">Placeholder</string>
    <string name="slivelabel_default">SLiveLabel_default</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="default_item">Default item</string>
    <string name="default_item">Default item</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string-array name="preference_array_theme_option_labels">
        <item>Holo Black</item>
        <item>Holo Dark</item>
        <item>Translucent Dark</item>
    </string-array>
</resources>
