<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="2dp">

    <com.af.synapse.view.SmartSeeker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SSeekBar_seekBar"
        android:minWidth="260dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/SSeekBar_descriptionFrame"
        android:layout_toLeftOf="@+id/SSeekBar_plusButton"
        android:layout_toRightOf="@+id/SSeekBar_minusButton" />

    <ImageButton
        android:layout_width="@dimen/stepButtons_width"
        android:layout_height="wrap_content"
        android:text="&lt;"
        android:id="@+id/SSeekBar_minusButton"
        android:textSize="24dp"
        android:singleLine="true"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_alignTop="@+id/SSeekBar_seekBar"
        android:layout_alignBottom="@+id/SSeekBar_plusButton"
        android:background="@null"
        android:src="@drawable/navigation_previous_item" />

    <ImageButton
        android:layout_width="@dimen/stepButtons_width"
        android:layout_height="wrap_content"
        android:text="&gt;"
        android:id="@+id/SSeekBar_plusButton"
        android:textSize="24dp"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_alignTop="@+id/SSeekBar_seekBar"
        android:layout_alignBottom="@+id/SSeekBar_seekBar"
        android:background="@null"
        android:layout_alignParentRight="true"
        android:src="@drawable/navigation_next_item" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_seek_value"
        android:id="@+id/SSeekBar_seekLabel"
        android:layout_below="@+id/SSeekBar_seekBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_default_value"
        android:id="@+id/SSeekBar_defaultLabel"
        android:visibility="gone"
        android:layout_below="@+id/SSeekBar_seekBar"
        android:layout_toRightOf="@+id/SSeekBar_minusButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_stored_value"
        android:id="@+id/SSeekBar_storedLabel"
        android:layout_below="@+id/SSeekBar_seekBar"
        android:layout_toLeftOf="@+id/SSeekBar_plusButton"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:id="@+id/SSeekBar_descriptionFrame"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="@dimen/descriptionFrame_left_margin"></LinearLayout>

</RelativeLayout>